fix extra spacing on agreements list on mobile

--- a/components/profile/shared/lists/agreementList/DKAgreementDetails.module.scss
+++ b/components/profile/shared/lists/agreementList/DKAgreementDetails.module.scss
@@ -152,6 +152,7 @@
   .valuesTaxUnitSelectorContainer {
     min-width: 0;
     width: 100%;
+    flex: initial;
   }
 
   .valuesSmartDistributionToggle {
